manda dinamicamente y obsoletamente----opstento mejoras

--- a/src/index.html
+++ b/src/index.html
@@ -73,10 +73,10 @@
                         <li>XXL</li>
                     </ul>
                 </div>
-                <div class="botones">
-                    <button class="btn1" id="añadirCarrito">ADD TO CART</button>
-                    <button class="btn2" id="combrarYa">BUY  IT NOW</button>
+                <div class="botones" id="botones">
+
                 </div>
+                <div id="mostrarAlert"></div>
             </div>
         </div>
 
